--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,27 +1,31 @@
-name: Playwright Tests
+name: CI Workflow
+
+# When to trigger the workflow
 on:
   push:
-    branches: [ main, master ]
+    branches: [ "main" ]   # Runs on push to main branch
   pull_request:
-    branches: [ main, master ]
+    branches: [ "main" ]   # Runs on pull request to main
+
 jobs:
-  test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest   # Runner environment (Linux VM)
+
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
-    - name: Install dependencies
-      run: npm ci
-    - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
-    - uses: actions/upload-artifact@v4
-      if: ${{ !cancelled() }}
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
+      # Checkout repo code
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Setup Node.js (you can use Java, Python, etc.)
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      # Install dependencies
+      - name: Install dependencies
+        run: npm install
+
+      # Run tests
+      - name: Run tests
+        run: npm test
