--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,22 +1,21 @@
-name: CI Workflow
+name: Playwright Tests
 
-# When to trigger the workflow
 on:
   push:
-    branches: [ "main" ]   # Runs on push to main branch
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]   # Runs on pull request to main
+    branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest   # Runner environment (Linux VM)
+  test:
+    runs-on: ubuntu-latest
 
     steps:
       # Checkout repo code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Setup Node.js (you can use Java, Python, etc.)
+      # Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -26,6 +25,18 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # Run tests
+      # Install Playwright browsers
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      # Run Playwright tests
       - name: Run tests
-        run: npm test
+        run: npx playwright test
+
+      # Upload Playwright test report (HTML)
+      - name: Upload Playwright Report
+        uses: actions/upload-artifact@v4
+        if: always()   # upload even if tests fail
+        with:
+          name: playwright-report
+          path: playwright-report
